alignment fixes
alignment fixes

--- a/MvcFramework/css/BMTestPlatform.css
+++ b/MvcFramework/css/BMTestPlatform.css
@@ -155,7 +155,7 @@
 	border: 1px solid #fff;
 	border-radius: 20px;
 	border-top: 20px solid #fff;
-	margin-top: 3rem;
+	margin-top: 1rem;
 	color: #fff;
 }
 
